--- a/package.json
+++ b/package.json
@@ -21,18 +21,20 @@
     "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
     "react": "^15.6.1",
-    "react-dom": "^15.5.1",
+    "react-dom": "^15.6.1",
     "react-router": "1.0.1",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.7.1"
   },
   "scripts": {
-    "webpack-dev-server": "NODE_ENV=development PORT=8080 webpack-dev-server--content-base public/ --hot --inline --devtool inline-source-map --history-api-fallback",
+    "start": "npm run production",
+    "production": "rm -rf public/index.html && NODE_ENV=production webpack -p && NODE_ENV=production babel-node app-server.js --presets es2015",
+    "webpack-dev-server": "NODE_ENV=development PORT=8080 webpack-dev-server --content-base public/ --hot --inline --devtool inline-source-map --history-api-fallback",
     "development": "cp views/index.html public/index.html && NODE_ENV=development webpack && npm run webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "react-hot-loader": "1.3.0"
+    "react-hot-loader": "^1.3.0"
   }
 }
